# gem16gb

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/baselines/llama_cpp/: README.md  build-info.txt  build.ps1  build.sh  characterization.json  commit.txt  conversion-probe.json  convert-patched.ps1  convert-patched.sh  convert.ps1  convert.sh  patched-conversion.json  prepare-patched-source.ps1  prepare-patched-source.sh  quality.json  run.ps1  run.sh  tensor-inventory.json
benchmarks/baselines/llama_cpp/patches/: 0001-support-mixed-fp8-nvfp4-compressed-tensors.patch
benchmarks/baselines/vllm/: README.md  direct-bf16-kv-characterization.json
benchmarks/prompts/: README.md
benchmarks/schemas/: result.schema.json
cmake/: CompilerWarnings.cmake  CudaArchitectures.cmake  Sanitizers.cmake
docs/: ARCHITECTURE.md  BENCHMARKING.md  CHECKPOINT_FORMAT.md  CORRECTNESS.md  DECISIONS.md  MEMORY.md  PERFORMANCE_LEDGER.md  ROADMAP.md  WEIGHT_LAYOUT.md
include/g4/: engine.h  model.h  sampling.h  status.h  types.h
include/gem16gb/: engine.h  fp8.h  layer.h  memory.h  model.h  nvfp4.h  sampling.h  status.h  tokenizer.h  types.h
models/: gemma4-12b-nvfp4.lock.json
scripts/: build.ps1  build.sh  windows-toolchain.ps1
src/cli/: bench_main.cpp  chat_main.cpp  inspect_main.cpp  run_main.cpp
src/cuda/: dispatch.cu  inference.cu
src/cuda/fp8/: checkpoint_probe.cu  checkpoint_probe.h  reference.cu  reference.h  sm120.cu  sm120.h
src/cuda/layer/: checkpoint_probe.cu  checkpoint_probe.h  reference.cu  reference.h
src/cuda/nvfp4/: checkpoint_probe.cu  checkpoint_probe.h  mlp.cu  mlp.h  mlp_checkpoint_probe.cu  reference.cu  reference.h  sm120.cu  sm120.h  sm120_layout.cpp  sm120_layout.h
src/model/: checkpoint_loader.cpp  config.cpp  config.h  manifest.cpp  manifest.h  safetensors.cpp  safetensors.h  tokenizer.cpp
src/numeric/: fp8.cpp  layer.cpp  nvfp4.cpp
src/platform/: mapped_file.h  mapped_file_posix.cpp  mapped_file_windows.cpp
src/runtime/: capabilities.cpp  inference_stub.cpp  memory.cpp  memory_plan.cpp  memory_plan.h
src/util/: json.cpp  json.h
tests/: tolerances.yaml
tests/cuda/: nvfp4_reference_test.cu
tests/golden/: README.md  vllm-gemma4-12b-nvfp4.json
tests/python/: test_benchmark_vllm.py  test_compare_logits.py  test_compare_manifests.py  test_golden_fixture.py
tests/unit/: fp8_test.cpp  json_test.cpp  layer_test.cpp  memory_plan_test.cpp  nvfp4_test.cpp  safetensors_test.cpp  sm120_layout_test.cpp  test.h  test_main.cpp  tokenizer_test.cpp
tools/: benchmark_vllm.py  compare_logits.py  compare_manifests.py  compare_nvfp4_quant.py  compare_states.py  dump_vllm_states.py  fetch_model.py  generate_golden.py  generate_llama_golden.py  inspect_checkpoint.py  inspect_gguf.py  summarize_llama_bench.py  validate_inference.py  validate_layer_checkpoint.py  verify_sm120_sass.py
